WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221960
REGRESSION(
r271735
): PaymentShippingOption.selected ignored
https://bugs.webkit.org/show_bug.cgi?id=221960
Summary
REGRESSION(r271735): PaymentShippingOption.selected ignored
Sam Sneddon [:gsnedders]
Reported
2021-02-16 06:34:02 PST
r271703
from
bug 220566
seems to have regressed a few tests in WPT:
https://wpt.fyi/results/payment-request?q=seq%28status%3Apass%7Cstatus%3Aok%20status%3Apass%7Cstatus%3Aok%20status%3Apass%7Cstatus%3Aok%20status%3Apass%7Cstatus%3Aok%20status%3Apass%7Cstatus%3Aok%20status%3A%21pass%26status%3A%21ok%20status%3A%21pass%26status%3A%21ok%20status%3A%21pass%26status%3A%21ok%20status%3A%21pass%26status%3A%21ok%20status%3A%21pass%26status%3A%21ok%29&run_id=5703710288117760&run_id=5730791449427968&run_id=5176095785615360&run_id=5761234664161280&run_id=6289110253699072&run_id=6295692878282752&run_id=5717790667309056&run_id=6252961795670016&run_id=5112363554439168&run_id=5651017565732864
Attachments
Patch
(46.45 KB, patch)
2021-11-08 13:02 PST
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
Patch
(39.14 KB, patch)
2021-11-08 17:26 PST
,
Devin Rousso
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Devin Rousso
Comment 1
2021-02-16 09:10:38 PST
Are you sure this was not caused by
r271735
? If it is
r271735
, then this is expected (see the comment in the ChangeLog of
r271735
as to why).
Sam Sneddon [:gsnedders]
Comment 2
2021-02-16 10:55:50 PST
rdar://problem/73464404
Okay, so the basic answer is that we just outright ignore PaymentShippingOption.selected now, and always use the first item, given the current spec cannot be implemented on macOS/iOS with PassKit? And that the tests previously passed because we had disagreement between the JS API and the UI presented by PassKit? If the spec is unimplementable with a major OS payment API, that sounds like feedback we should send to the WG. Leaving this issue open to: 1. Send feedback (assigned to Andy to do so, per Devin) 2. Update the spec and tests, thereby resolving the issue by making us compliant with the spec; or fix our implementation v. the current spec if PassKit adds a suitable API, and to document our current violation of the spec
Devin Rousso
Comment 3
2021-11-08 13:02:09 PST
Created
attachment 443595
[details]
Patch
Tim Horton
Comment 4
2021-11-08 13:27:16 PST
Comment on
attachment 443595
[details]
Patch If there is a regression, it should be fixed separately from new feature work.
Devin Rousso
Comment 5
2021-11-08 17:26:03 PST
Created
attachment 443637
[details]
Patch
EWS
Comment 6
2021-11-09 12:04:28 PST
Committed
r285521
(
244038@main
): <
https://commits.webkit.org/244038@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 443637
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug