REGRESSION(r271735): PaymentShippingOption.selected ignored https://bugs.webkit.org/show_bug.cgi?id=221960 <rdar://problem/73464404>

Reviewed by Tim Horton.

Source/WebCore:

Leverage new `PKShippingMethods` SPI to provide both the general list of `PKShippingMethod`
and the default selected `PKShippingMethods` when creating/updating a payment request.

* Modules/applepay/ApplePayShippingMethod.idl:
* Modules/applepay/ApplePayShippingMethod.h:
(WebCore::ApplePayShippingMethod::encode const):
(WebCore::ApplePayShippingMethod::decode):
Add new `selected` boolean property.

* Modules/applepay/paymentrequest/ApplePayPaymentHandler.cpp:
(WebCore::ApplePayPaymentHandler::computeShippingMethods const):

* Modules/paymentrequest/PaymentRequest.cpp:
(WebCore::checkAndCanonicalizeDetails):

Source/WebCore/PAL:

Leverage new `PKShippingMethods` SPI to provide both the general list of `PKShippingMethod`
and the default selected `PKShippingMethods` when creating/updating a payment request.

* pal/cocoa/PassKitSoftLink.h:
* pal/cocoa/PassKitSoftLink.mm:
* pal/spi/cocoa/PassKitSPI.h:

Source/WebKit:

Leverage new `PKShippingMethods` SPI to provide both the general list of `PKShippingMethod`
and the default selected `PKShippingMethods` when creating/updating a payment request.

* Shared/ApplePay/cocoa/WebPaymentCoordinatorProxyCocoa.h:
* Shared/ApplePay/cocoa/WebPaymentCoordinatorProxyCocoa.mm:
(WebKit::toPKShippingMethods): Added.
(WebKit::WebPaymentCoordinatorProxy::platformPaymentRequest):
Add new helper to generate the `PKShippingMethods` from WebCore objects.

* Platform/cocoa/PaymentAuthorizationPresenter.mm:
(WebKit::PaymentAuthorizationPresenter::completePaymentMethodSelection):
(WebKit::PaymentAuthorizationPresenter::completeShippingContactSelection):
(WebKit::PaymentAuthorizationPresenter::completeShippingMethodSelection):
(WebKit::PaymentAuthorizationPresenter::completeCouponCodeChange):
(WebKit::toPKShippingMethods): Deleted.

* Platform/cocoa/WKPaymentAuthorizationDelegate.mm:
(-[WKPaymentAuthorizationDelegate completePaymentMethodSelection:]):
(-[WKPaymentAuthorizationDelegate completeShippingContactSelection:]):
(-[WKPaymentAuthorizationDelegate completeShippingMethodSelection:]):
(-[WKPaymentAuthorizationDelegate completeCouponCodeChange:]):
(-[WKPaymentAuthorizationDelegate _initWithRequest:presenter:]):
(toShippingMethod):
(-[WKPaymentAuthorizationDelegate _didSelectShippingMethod:completion:]):
(-[WKPaymentAuthorizationDelegate summaryItems]): Deleted.
(-[WKPaymentAuthorizationDelegate shippingMethods]): Deleted.
Drive-by: Delete unused methods.

Source/WTF:

Leverage new `PKShippingMethods` SPI to provide both the general list of `PKShippingMethod`
and the default selected `PKShippingMethods` when creating/updating a payment request.

* wtf/PlatformEnableCocoa.h:
* wtf/PlatformHave.h:

LayoutTests:

* http/tests/paymentrequest/payment-request-change-shipping-option.https.html:
* http/tests/paymentrequest/payment-request-change-shipping-option.https-expected.txt:
* http/tests/paymentrequest/updateWith-shippingOptions.https.html:
* http/tests/paymentrequest/updateWith-shippingOptions.https-expected.txt:



Canonical link: https://commits.webkit.org/244038@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285521 268f45cc-cd09-0410-ab3c-d52691b4dbfc